# MatrixCalculator

./: README.md
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/matrixcalculator/: HomeActivity.kt  MainActivity.kt  WifiRssLogger.kt
app/src/main/res/layout/: activity_home.xml  activity_main.xml  activity_wifi_rss.xml
gradle/wrapper/: gradle-wrapper.properties
